--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,35 +5,62 @@ on:
     branches:
       - dev
 
+permissions:
+  contents: read
+
 defaults:
   run:
-    working-directory: ./
+    working-directory: ./terraform
+    
 
 jobs:
-  terraform-build:
+  build:
     name: "Build"
     runs-on: ubuntu-latest
     container:
       image: hashicorp/terraform:latest
       # volumes:
-      #   - ../../:/home/terraform
+      #   - terraform:/terraform
     steps:
+      - name: list
+        run: pwd && ls -lsa
       - name: init
         run: terraform init
       - name: fmt
-        run: terraform fmt
+        run: terraform fmt --check
         continue-on-error: true
       - name: validate
         run: terraform validate
       - name: plan
         run: terraform plan
 
-        
+  deploy:
+    name: "Deploy"
+    runs-on: ubuntu-latest
+    container:
+      image: hashicorp/terraform:latest
+      # volumes:
+      #   - terraform:/terraform
+    steps:
+      - name: init
+        run: terraform init
+      - name: fmt
+        run: terraform apply --auto-approve
+    needs: build
       
-
-
-
-
+  destroy:
+    name: "Destroy"
+    runs-on: ubuntu-latest
+    container:
+      image: hashicorp/terraform:latest
+      # volumes:
+      #   - terraform:/terraform
+    steps:
+      - name: init
+        run: terraform init
+      - name: fmt
+        run: terraform destroy --auto-approve
+    needs: build
 
 
   
