--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-.terraform*
-.terraform.lock.hcl
-modules/.terraform*
-terraform.tfvars
-*tfstate*
+terraform/.terraform*
+terraform/.terraform.lock.hcl
+terraform/modules/.terraform*
+terraform/terraform.tfvars
+terraform/*tfstate*
